Fix Overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,8 @@
 
     body {
 
+        max-width: 100%;
+        overflow-x: hidden;
         margin: 0;
         background-color: rgb(239, 255, 253);
         font-family: Papyrus;
